@@ -30,7 +30,7 @@ buffer_read_memory (memaddr, myaddr, length, info)
      struct disassemble_info *info;
 {
   if (memaddr < info->buffer_vma
-      || memaddr + length > info->buffer_vma + info->buffer_length)
+      || memaddr - info->buffer_vma + length > info->buffer_length)
     /* Out of bounds.  Use EIO because GDB uses it.  */
     return EIO;
   memcpy (myaddr, info->buffer + (memaddr - info->buffer_vma), length);
@@ -67,7 +67,10 @@ generic_print_address (addr, info)
      bfd_vma addr;
      struct disassemble_info *info;
 {
-  (*info->fprintf_func) (info->stream, "0x%x", addr);
+  char buf[30];
+
+  sprintf_vma (buf, addr);
+  (*info->fprintf_func) (info->stream, "0x%s", buf);
 }
 
 /* Just concatenate the address as hex.  This is included for
